# Scholia

./: .gitignore  LICENSE  README.md  esbuild.config.mjs  main.js  manifest.json  package-lock.json  package.json  requirements-marker.txt  styles.css  tsconfig.json
docs/: reading-pipeline.md  scholar-md-extraction-plan.md
eval/pdf-tools/: README.md  manifest.json  run-eval.mjs
prompts/: batch-explanation.md  fallback-explanation.md  key-sentence-selection.md  sep-entry-selection.md  sep-summary.md  term-discovery.md
src/: core.d.ts  core.js  llmProviders.ts  main.ts  prompts.d.ts  sep.d.ts  sep.js
tests/: core.test.cjs  sep.test.cjs
tools/paper2md/: README.md  RELEASING.md  bootstrap.sh  pyproject.toml
tools/paper2md/paper2md/: __init__.py  cli.py  config.py  postprocess.py  prompts.py  splitter.py  stitcher.py
tools/paper2md/paper2md.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tools/paper2md/tests/: test_postprocess.py  test_stitcher.py
tools/paper2mdviallm/: README.md  RELEASING.md  bootstrap.sh  pyproject.toml  requirements.txt
tools/paper2mdviallm/paper2mdviallm/: __init__.py  cli.py  config.py  converter.py  metadata.py  postprocess.py  prompts.py  stitcher.py  verifier.py
tools/paper2mdviallm/tests/: test_postprocess.py  test_stitcher.py
tools/scholar-md/: README.md  bootstrap.sh  pyproject.toml
tools/scholar-md/examples/: sample_output.md
tools/scholar-md/src/scholar_md/: __init__.py  cli.py  convert.py  diagnostics.py  extract.py  footnote.py  formula.py  layout.py  llm.py  markdown.py  models.py  nodes.py  notes.py  paragraph.py  polish.py  references.py  utils.py
tools/scholar-md/tests/: test_convert_contract.py  test_footnote.py  test_formula.py  test_layout.py  test_markdown.py  test_polish.py  test_references.py  test_utils.py
