[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paper2md"
version = "0.1.0"
description = "LLM-native academic PDF to Obsidian Markdown converter."
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Scholia" }]
dependencies = [
  "anthropic>=0.40.0",
  "openai>=1.0.0",
  "PyMuPDF>=1.24.0",
  "pydantic>=2.0",
  "python-dotenv>=1.0.0",
  "tenacity>=8.0.0",
  "rich>=13.0.0",
  "typer>=0.12.0"
]

[project.scripts]
paper2md = "paper2md.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["paper2md*"]
